--- a/PlantNet_Train.ipynb
+++ b/PlantNet_Train.ipynb
@@ -7,7 +7,7 @@
       "name": "PlantNet_Train.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPKM/prNwrPpUyOkxFUGcbI",
+      "authorship_tag": "ABX9TyNCU774IJaB8Aqkel1f8X+C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5649,7 +5649,7 @@
         "opt = keras.optimizers.Adam(learning_rate=0.01)\n",
         "# opt = \"rmsprop\"\n",
         "# compile the model (should be done *after* setting layers to non-trainable)\n",
-        "model.compile(optimizer=opt, loss='categorical_crossentropy' , metrics= [\"accuracy\"])"
+        "model.compile(optimizer=opt, loss='categorical_crossentropy' , metrics= [\"accuracy\", 'top_k_categorical_accuracy'])"
       ],
       "execution_count": null,
       "outputs": []
@@ -5797,7 +5797,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4RJSQJS1oi3J",
-        "outputId": "476b55fd-fc9a-4c14-8f51-e94e2891379b"
+        "outputId": "ac51fd1d-76a4-4a9f-dc42-ca2b09f73e80"
       },
       "source": [
         "epochs = 5\n",
@@ -5823,7 +5823,11 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
-            "4257/7623 [===============>..............] - ETA: 36:44 - loss: 1.8591 - accuracy: 0.5923"
+            "7623/7623 [==============================] - 5240s 687ms/step - loss: 1.8698 - accuracy: 0.5908 - val_loss: 3.2839 - val_accuracy: 0.3974\n",
+            "Epoch 2/5\n",
+            "7623/7623 [==============================] - 5250s 689ms/step - loss: 1.8532 - accuracy: 0.5942 - val_loss: 3.1133 - val_accuracy: 0.4295\n",
+            "Epoch 3/5\n",
+            "6054/7623 [======================>.......] - ETA: 16:58 - loss: 1.8560 - accuracy: 0.5929"
           ],
           "name": "stdout"
         }
