Optimizer not working properly. Using RMSPROP instead

--- a/PlantNet_Train.ipynb
+++ b/PlantNet_Train.ipynb
@@ -6,18 +6,8 @@
     "colab": {
       "name": "PlantNet_Train.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "WudN9AbuNL62",
-        "YiIMLiQgGFyE",
-        "pCQFEzaNW6S2",
-        "s3eGZQka-hl_",
-        "onbJhTU9_oy8",
-        "jMCbNnNg3ThQ",
-        "m7CpsvZs8d0u",
-        "mkLcN_MFWENE",
-        "-VUABjndV9FH"
-      ],
-      "authorship_tag": "ABX9TyOMwAGNstDsIVdcgXYVrDOF",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPAGJOTd/DeDZmc7bDMLKEQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -724,7 +714,7 @@
         "# Combine input layer with base model\n",
         "# full_model = Model(inputs=[inputs], outputs=[base_model.output])"
       ],
-      "execution_count": 48,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -750,7 +740,7 @@
         "x = Dense(1024, activation=\"relu\")(x)\n",
         "predictions = Dense(1081, activation=\"softmax\")(x)"
       ],
-      "execution_count": 49,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -772,7 +762,7 @@
         "# model = Model(inputs = inputs, outputs = predictions)\n",
         "model = Model(inputs = base_model.input, outputs = predictions)"
       ],
-      "execution_count": 50,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -793,7 +783,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "55e45051-cc19-4259-bba5-0dc47426bc01"
+        "outputId": "fb6ecc14-3450-43ad-b0f4-615a048d24ba"
       },
       "source": [
         "# first: train only the top layers (which were randomly initialized)\n",
@@ -805,7 +795,7 @@
         "base_model.trainable = not FREEZE_LAYERS\n",
         "print(\"Model is trainable: \" + str(base_model.trainable))"
       ],
-      "execution_count": 51,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,7 +812,7 @@
         "id": "V6fHjIWwzEOf"
       },
       "source": [
-        "# Set Up Optimizer"
+        "# Set Up Optimizer\n"
       ]
     },
     {
@@ -831,26 +821,45 @@
         "id": "EO67WBNWsBBZ"
       },
       "source": [
-        "OPTIMIZER = \"adam\"\n",
-        "LEARNING_RATE = 0.01\n",
+        "OPTIMIZER = \"rmsprop\"\n",
+        "\n",
+        "# lr_schedule = keras.optimizers.schedules.ExponentialDecay(\n",
+        "#     initial_learning_rate=1e-2,\n",
+        "#     decay_steps=10000,\n",
+        "#     decay_rate=0.9)\n",
+        "# optimizer = keras.optimizers.SGD(learning_rate=lr_schedule)\n",
+        "\n",
+        "\n",
         "\n",
         "# if OPTIMIZER == \"adam\":\n",
-        "#   opt = keras.optimizers.Adam(learning_rate=LEARNING_RATE)\n",
+        "#   opt = tf.keras.optimizers.Adam(\n",
+        "#     learning_rate=lr_schedule,\n",
+        "#     beta_1=0.9,\n",
+        "#     beta_2=0.999,\n",
+        "#     epsilon=1e-07,\n",
+        "#     amsgrad=False,\n",
+        "#     name=\"Adam\",\n",
+        "# )\n",
         "#   print(\"ADAM Optimizer used with {} learning rate.\".format(LEARNING_RATE))\n",
         "# elif OPTIMIZER == \"rmsprop\":\n",
-        "#   opt = \"rmsprop\"\n",
+        "#   opt = tf.keras.optimizers.RMSprop(\n",
+        "#     learning_rate=lr_schedule,\n",
+        "#     rho=0.9,\n",
+        "#     momentum=0.0,\n",
+        "#     epsilon=1e-07,\n",
+        "#     centered=False,\n",
+        "#     name=\"RMSprop\",\n",
+        "# )\n",
         "#   print(\"RMSPROP Optimizer used.\")\n",
         "# else:\n",
         "#   opt = None\n",
         "#   print(\"Default Optimizer used.\")\n",
-        "\n",
-        "# # opt = keras.optimizers.Adam(0.1)\n",
         "opt = 'rmsprop'\n",
         "\n",
         "# compile the model (should be done *after* setting layers to non-trainable)\n",
         "model.compile(optimizer=opt, loss='categorical_crossentropy', metrics= [\"accuracy\", 'top_k_categorical_accuracy'])"
       ],
-      "execution_count": 53,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -869,12 +878,15 @@
         "id": "QNJ-ABg126HA"
       },
       "source": [
-        "tf.keras.utils.plot_model(\n",
-        "    model, to_file='model.png', show_shapes=True, show_dtype=True,\n",
-        "    show_layer_names=True, rankdir='TB', expand_nested=False, dpi=96\n",
-        ")"
+        "PLOT_MODEL = False\n",
+        "\n",
+        "if PLOT_MODEL:\n",
+        "  tf.keras.utils.plot_model(\n",
+        "      model, to_file='model.png', show_shapes=True, show_dtype=True,\n",
+        "      show_layer_names=True, rankdir='TB', expand_nested=False, dpi=96\n",
+        "  )"
       ],
-      "execution_count": null,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -893,13 +905,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VpFVaQZFflMc",
-        "outputId": "b8deccbf-5576-46e3-fbcb-0f89e00a8917"
+        "outputId": "7f2b9c9b-c3b6-4067-84e7-e90379acd8d1"
       },
       "source": [
         "from datetime import datetime \n",
         "\n",
         "GDRIVE_DIR = \"/content/drive/MyDrive/saved_models/\" # Save Path for models\n",
-        "filepath = \"\"\n",
+        "filepath = \"/content/drive/MyDrive/saved_models/plantNet_32_rmsprop_0.01_2021-08-20.h5\"\n",
         "\n",
         "\n",
         "# Date Time\n",
@@ -917,13 +929,13 @@
         "  \n",
         "  print(\"New model filename is {}\".format(filepath))"
       ],
-      "execution_count": 54,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "No keras model found at , will start training from scratch.\n",
-            "New model filename is /content/drive/MyDrive/saved_models/plantNet_32_adam_0.01_2021-08-20.h5\n"
+            "New model filename is /content/drive/MyDrive/saved_models/plantNet_32_rmsprop_0.01_2021-08-20.h5\n"
           ],
           "name": "stdout"
         }
@@ -960,7 +972,7 @@
         "callbacks_list = [checkpoint, earlyStopping, tensorboard_callback]\n",
         "\n"
       ],
-      "execution_count": 55,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -979,7 +991,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4RJSQJS1oi3J",
-        "outputId": "cf530922-286b-4f0e-9efc-7accf7652b7b"
+        "outputId": "1afc83f9-2400-41b6-c310-6786633f5f99"
       },
       "source": [
         "epochs = 5\n",
@@ -1002,7 +1014,15 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
-            " 138/7623 [..............................] - ETA: 1:19:52 - loss: 3.5112 - accuracy: 0.3220 - top_k_categorical_accuracy: 0.5661"
+            "7623/7623 [==============================] - 5072s 664ms/step - loss: 3.4224 - accuracy: 0.3537 - top_k_categorical_accuracy: 0.5860 - val_loss: 5.1833 - val_accuracy: 0.3157 - val_top_k_categorical_accuracy: 0.5377\n",
+            "Epoch 2/5\n",
+            "7623/7623 [==============================] - 5051s 663ms/step - loss: 3.0300 - accuracy: 0.4393 - top_k_categorical_accuracy: 0.6665 - val_loss: 4.2700 - val_accuracy: 0.3118 - val_top_k_categorical_accuracy: 0.5240\n",
+            "Epoch 3/5\n",
+            "7623/7623 [==============================] - 5054s 663ms/step - loss: 2.9474 - accuracy: 0.4685 - top_k_categorical_accuracy: 0.6889 - val_loss: 3.5502 - val_accuracy: 0.4098 - val_top_k_categorical_accuracy: 0.6258\n",
+            "Epoch 4/5\n",
+            "7623/7623 [==============================] - 5041s 661ms/step - loss: 2.8970 - accuracy: 0.4857 - top_k_categorical_accuracy: 0.7022 - val_loss: 3.4359 - val_accuracy: 0.4414 - val_top_k_categorical_accuracy: 0.6577\n",
+            "Epoch 5/5\n",
+            "2771/7623 [=========>....................] - ETA: 51:28 - loss: 2.8605 - accuracy: 0.4928 - top_k_categorical_accuracy: 0.7092"
           ],
           "name": "stdout"
         }
